finished v1 of article cmp

--- a/src/app/component/article/article-body/article-body.html
+++ b/src/app/component/article/article-body/article-body.html
@@ -1,3 +1,15 @@
-<p>
-  article-body works!
-</p>
+<div class="article-body">
+  <app-component-atoms-image imgAlt='' imgSource='{{pubImg}}'></app-component-atoms-image>
+  <div class="description-content">
+    <p>
+      Lorem ipsum dolor sit amet, errem omittam instructior mei te, quo ex wisi populo,
+      qui congue doming cu. An etiam vitae intellegat usu, no regione offendit adipiscing eos,
+      id nulla indoctum duo. Te minimum pertinax sea. Ei eam cibo veniam. Te eum velit habemus nusquam.
+    </p>
+    <p>
+      Id eam mazim noster delectus, ad fuisset verterem cum. Numquam labores usu no.
+      Est no euismod periculis repudiandae, pro brute mollis virtute id. Audire eruditi pri id,
+      ea mel cibo aeque, cu quod nostro constituto qui. Mel tritani dissentias scripserit ei, liber soluta eu sit.
+    </p>
+  </div>
+</div>
