--- a/src/app/component/article/article-head/article-head.html
+++ b/src/app/component/article/article-head/article-head.html
@@ -1,10 +1,18 @@
 <div class="article-head">
   <div class="publisher-box">
-    <app-component-atoms-logo logoSize="" logoAlt="Avatar" logoSource="../../../../../assets/image/avatar.png"></app-component-atoms-logo>
-    <span class="publisher"> {{ publisher }} <i class="visibility" *ngIf="isVisibleToAll">pu</i></span>
-    <span class="publishDate"> {{ publishDate }} </span>
+    <div class="pub-box-a">
+      <app-component-atoms-logo logoSize="" logoAlt="" logoSource="{{publisherImg}}"></app-component-atoms-logo>
+    </div>
+
+    <div class="pub-box-b">
+      <span class="publisher"> {{ publisher }}
+        <i class="visibility icon-public" *ngIf="isVisibleToAll"></i>
+        <i class="visibility icon-lock-closed" *ngIf="!isVisibleToAll"></i>
+      </span>
+      <span class="publishDate"> {{ publishDate }} </span>
+    </div>
   </div>
   <div class="settings-icons">
-
+    <i class="icon-cog"></i>
   </div>
 </div>
