--- a/src/app/component/article/article.scss
+++ b/src/app/component/article/article.scss
@@ -1,4 +1,14 @@
 .article-wrapper {
-  border: 1px solid lightgray;
-  width: 500px;
+  box-shadow: 0 9px 0px 0px white, 0 -9px 0px 0px white, 12px 0 15px -4px #eee, -12px 0 15px -4px #eee;
+  width:55%;
+  @media (max-width: 500px) {
+    width:100% ;
+  }
+  justify-content: center;
+  display:block;
+  margin: 0 auto;
+  border-top: 2px solid slategray;
+  border-bottom: 2px solid slategray;
+  border-radius: 2px;
 }
+
