--- a/src/assets/style/partials/_fonts.scss
+++ b/src/assets/style/partials/_fonts.scss
@@ -1,3 +1,4 @@
+@import '../../assets/fonts/icomoon/style.css';
 @import url('https://fast.fonts.net/t/1.css?apiType=css&projectid=caeea2f7-6951-4aa1-bfe2-9219deb853dc');
 
 
